--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "ts-node src/server.ts"
+    "start": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^1.1.8"
   }
 }
